--- a/language/ar.json
+++ b/language/ar.json
@@ -4355,8 +4355,8 @@
             ]
         },
         "participantsUpdate": {
-            "texto1": "👋 مرحباً!\n@user",
-            "texto2": "👋 وداعاً!\n@user",
+            "texto1": "*⎔┉═〘𝑅𝐼𝑇𝐴🌸𝐵𝛩𝑇〙⌯═⎔*\n*┆→ @subject*\n*┆⎔ ┉═─⌯═┉═─⌯═⎔*\n*┆─⊱ @user*\n*┆─⊱ مرحبا👋 انا ريتا بوت 😃* \n*┆*\n*┆─⊱ وصف المجموعة 🧾:*\n\n@desc\n\n*┆*\n*┆─⊱ استمتع معنا☺️*\n*┆⎔ ┉═─⌯═ ┉═─⌯═⎔*",
+            "texto2": "*⎔┉═〘𝑅𝐼𝑇𝐴🌸𝐵𝛩𝑇〙⌯═⎔*\n*┆ @user*\n*┆ مع السلامة 👋*\n*┆⎔ ┉═─⌯═┉═─⌯═⎔*",
             "texto3": "[ ℹ️ ] تمت ترقية @user إلى مشرف.",
             "texto4": "[ ℹ️ ] تمت إزالة صلاحيات المشرف من @user.",
             "texto5": "[ ℹ️ ] تم تعديل وصف المجموعة.",
