--- a/language/ar.json
+++ b/language/ar.json
@@ -4338,31 +4338,31 @@
             ]
         },
         "dfail": {
-            "texto1": "[ ℹ️ ] هذا الأمر يمكن استخدامه فقط بواسطة صاحب البوت.",
-            "texto2": "[ ℹ️ ] هذا الأمر يمكن استخدامه فقط بواسطة صاحب البوت.",
-            "texto3": "[ ℹ️ ] هذا الأمر يمكن استخدامه فقط بواسطة المشرفين وصاحب البوت.",
+            "texto1": "『⭐╎↫الأمر لي صاحب البوت فقط 👑😌.』",
+            "texto2": "『⭐╎↫الأمر لي صاحب البوت فقط 👑😌.』",
+            "texto3": "『⭐╎↫الأمر خاص بي الادمنز وصاحب البوت فقط 🌚✨.』",
             "texto4": "[ ℹ️ ] هذا الأمر يمكن استخدامه فقط بواسطة المستخدمين المميزين وصاحب البوت.",
-            "texto5": "[ ℹ️ ] هذا الأمر يمكن استخدامه فقط في المجموعات.",
+            "texto5": "『⭐╎↫الأمر خاص بي المجموعات فقط 🌿👻.』",
             "texto6": "[ ℹ️ ] هذا الأمر يمكن استخدامه فقط في الدردشة الخاصة بالبوت.",
-            "texto7": "[ ℹ️ ] هذا الأمر يمكن استخدامه فقط بواسطة مشرفي المجموعة.",
-            "texto8": "[ ℹ️ ] لاستخدام هذا الأمر، يجب أن يكون البوت مشرفًا في المجموعة.",
+            "texto7": "『⭐╎↫الأمر خاص بي الأدمنز فقط 😴👑.』",
+            "texto8": "『⭐╎↫أرفع البوت أدمن لي ستخدام الأمر 😴🌿.』",
             "texto9": "[ ℹ️ ] لاستخدام هذا الأمر، يجب أن تكون مسجلاً.\n\n*[ 💡 ] استخدم الأمر:* /verificar nome.idade للتسجيل.",
             "texto10": "[ ℹ️ ] تم تعطيل هذا الأمر بواسطة صاحب البوت.",
             "texto11": [
-                "[ ⚠️ ] تحذير",
-                "[ ⚠️ ] تحذير",
-                "https://github.com/BrunoSobrino/TheMystic-Bot-MD"
+                "『 ❲☘️❳ ╎ استعمال خاطئ╎😴 』",
+                "『 ❲☘️❳ ╎ استعمال خاطئ╎😴 』",
+                "https://chat.whatsapp.com/GNp7n9WYak8JBanOEdWiGi"
             ]
         },
         "participantsUpdate": {
             "texto1": "*◆━── ⊱∘┃﹝🌿﹞┃∘⊰ ──━◆*\n*┆─⊱ إسم الجروب :*\n @subject \n*◆━── ⊱∘┃﹝🌿﹞┃∘⊰ ──━◆*\n*┆─⊱ @user*\n*┆─⊱ مرحبا👋 انا ريتا بوت 😃* \n*┆*\n*┆─⊱ وصف المجموعة 🧾:*\n\n@desc\n\n*\n*┆─⊱ استمتع معنا☺️*\n*『𝑅𝐼𝑇𝐴🌸𝐵𝛩𝑇』*\n*◆━── ⊱∘┃﹝🌿﹞┃∘⊰ ──━◆*",
             "texto2": "*◆━── ⊱∘┃﹝🌿﹞┃∘⊰ ──━◆*\n*┆─⊱ @user*\n*┆─⊱ نشوفك على خير ❤️👋*\n*『𝑅𝐼𝑇𝐴🌸𝐵𝛩𝑇』*\n*◆━── ⊱∘┃﹝🌿﹞┃∘⊰ ──━◆*",
-            "texto3": "*『🌿』* *مرحبا 👋 @user لقد ترقية من مجرد عضو إلى أدمن 😃.*",
-            "texto4": "*『🌿』* *مرحبا 👋 @user مع الاسف فقد تم نزع منصب الإشراف منك 🥲.*",
-            "texto5": "*『🌿』* *لقد تم التعديل قليلاً في وصف الجمجموعة 🫢.*",
-            "texto6": "*『🌿』* *لقد تم تعديل إسم المجموعه 🙃.*",
-            "texto7": "*『🌿』* *لقد تم تغير صورة المجموعة 🙃.*",
-            "texto8": "*『🌿』* *لقد تم تغير رابط المجموعة 🙃.*"
+            "texto3": "*『⭐╎↫مرحبا 👏 @user لقد أصبحت أدمن 🌚✨.』*",
+            "texto4": "*『⭐╎↫مرحبا 👋 @user لم تعد أدمن بعد الأن 😴✨.』*",
+            "texto5": "*『⭐╎↫لقد تم تعديل وصف المجموعه 🫢✨.』*",
+            "texto6": "*『⭐╎↫لقد تم تعديل اسم المجموعه 😃✨.』*",
+            "texto7": "*『⭐╎↫لقد تم تعديل صورة المجموعه 🙃.』*",
+            "texto8": "*『⭐╎↫لقد تم تعديل رابط المجموعه 🙃.』*"
         },
         "deleteUpdate": {
             "texto1": [
