--- a/language/ar.json
+++ b/language/ar.json
@@ -4319,11 +4319,11 @@
     "handler": {
         "handler": {
             "texto1": [
-                "< مستخدم موقوف />\n",
-                "▢ تحذير:",
-                "\n▢ السبب:",
-                "▢ السبب: غير محدد",
-                "[ ℹ️ ] إذا كنت تعتقد أن هذا خطأ ولديك أدلة، يمكنك التواصل مع صاحب البوت للاستئناف."
+                "*『⭐╎↫أنت محضور من أستخدام البوت⛔🧐.』*\n",
+                "*⛔ تحذير:*",
+                "*\n🧐 السبب:*",
+                "*😴 السبب: غير محدد*",
+                "*『⭐╎↫إذا كنت تضن انك بندة بي الغلط او معك أي دليل تواصل مع صاحب البوت: ❲https://wa.me/212657035661❳ 🌿😴.』*"
             ],
             "texto2": "[ ℹ️ ] انتهت الماسات الخاصة بك، يمكنك الحصول على المزيد باستخدام الأمر:",
             "texto3": [
